# agentledger-core

./: .gitignore  LICENSE  OSS_EXTRACTION_PLAN.md  README.md  SPEC.md  pyproject.toml
examples/: hello_agent.py
src/agentledger/: __init__.py
src/agentledger/core/: __init__.py  errors.py  hash.py  types.py
src/agentledger/events/: __init__.py  envelope.py  factory.py  types.py
src/agentledger/inspect/: __init__.py  run_differ.py  run_inspector.py
src/agentledger/ledger/: __init__.py  base.py  local.py
src/agentledger/replay/: __init__.py  engine.py  player.py
src/agentledger/state/: __init__.py  world_state.py
tests/compliance/: __init__.py  test_compliance.py
tests/unit/: test_core.py
